dnprogs (2.35) unstable; urgency=low

  * Make dnroute work on big-endian machines
  * dnroute can now send router messages on devices with small MTUs
  * dnroute now sends level2 router messages and creates area
    routing tables from those it receives
  * Add script 'dnetinfo' to query the routing daemon
  * libdnet: Fix getnodebyaddr so it works with high node numbers.
  * Make ncurses phone work on big-endian machines
  * Better newline handling in dnlogin. This should fix those niggling
    "that doesn't look quite right" things. It also works with GNV's bash too!
  * Add multinet IP tunnelling daemon.


dnprogs (2.34) unstable; urgency=low

  * Don't SIGBUS on sparc sending DAP packets > 255 bytes long
  * Add -P & -D (print & delete) flags to dncopy
  * Add zip files to fal -ae list of known filetypes
  * dnlogin no loger loses spaces on ALLCAPS input
  * dnlogin differentiates better betwwen ^C & ^Y when it needs to

 -- Patrick Caulfield <patrick@debian.org>  Thu, 16 Mar 2006 14:40:45 +0000

dnprogs (2.33) unstable; urgency=low
  
  * Fix dncopy fetching from RSX (don't set RRL unless the user asks for it)
  * Get rid of spurious protection error from dncopy
  * dnlogin sets local username so (eg) VMSs SHOW TERM displays it
  * Numerous fixes dnlogin so it now works to RSX
  * Several fixes to fal so it works with RSX
  * dnlogin now disconnects correctly when it gets a unbind
  * ctermd: Fix "-bash: no job control in this shell" message on some platforms
  * dndir displays more consistently (and once!) when a remote file is locked
  * phone_ncurses now resizes the display if its xterm is resized

 -- Patrick Caulfield <patrick@debian.org>  Thu, 26 Jan 2006 16:19:42 +0000
  
dnprogs (2.32) unstable; urgency=low

  * fal removes [] from names as they could cause confusion.
  * Fixed crash in libdap if a connection gets closed more than once.
  * Fix libdnet's dnet_recv to cope with 0 being returned from recvmsg.